Oops, fix bad quotes in styles for results-drilldown-controls__expand-collapse

--- a/client/src/panels/panel_declarations/results/result_drilldown/result_drilldown_display.scss
+++ b/client/src/panels/panel_declarations/results/result_drilldown/result_drilldown_display.scss
@@ -8,11 +8,11 @@
 }
 
 .results-drilldown-controls__expand-collapse {
-  display: "flex";
-  justify-content: "space-around";
+  display: flex;
+  justify-content: space-around;
 
   & > button {
-    margin: "5px 2px";
+    margin: 5px 2px;
     flex-grow: 0.3;
   }
 }
